@@ -160,30 +160,6 @@ modified by p.hirst@jach.hawaii.edu
 
 =cut
 
-    sub dectodms {
-
-# Convert decimal RA/Dec. to degrees/minutes/seconds.
-# Takes a decimal number.
-# Returns an array $array[0] = degrees
-#                  $array[1] = minutes
-#                  $array[2] = seconds
-       my $dec = shift;
-       my @dms;
-       my $neg = 0;
-       if ( $dec < 0 ) {
-          $neg = 1;
-          $dec = - $dec;
-       }
-       $dms[ 0 ] = int( $dec );
-       $dms[ 1 ] = int( ( $dec - int( $dec ) ) * 60 );
-       $dms[ 2 ] = ( ( $dec - $dms[ 0 ] ) * 60 -
-                   int( ( $dec - $dms[ 0 ] ) * 60 ) ) * 60;
-       if( $neg ) { $dms[0] *= -1 }
-       return @dms;
-
-# end subroutine dectodms
-    }
-
 # Validation
 # ==========
     my $groupname = $Grp->file;
