@@ -1,6 +1,7 @@
 2001-05-17  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* General.pm: Add cosdeg. Move it from primitives
+	(dectodms): Move dectodms from _CREATE_STANDARD_ (CGS4) 
 
 2001-05-04  Tim Jenness  <timj@jach.hawaii.edu>
 
